[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/supermarket/prop/DigitalClock.gd" type="Script" id=1]
[ext_resource path="res://scenes/supermarket/prop/DigitalClockScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/model/supermarket/prop/DigitalClockModel.tscn" type="PackedScene" id=3]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
albedo_texture = SubResource( 2 )

[node name="DigitalClock" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 256, 126 )
render_target_v_flip = true

[node name="Screen" parent="Viewport" instance=ExtResource( 2 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.15258e-08, 0, 0.95, 0, 0.95, 0, -0.95, 0, -4.15258e-08, 0.0566441, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="TicTac" type="AudioStreamPlayer3D" parent="."]

[node name="digital-clock" parent="." instance=ExtResource( 3 )]

[connection signal="ticked" from="Viewport/Screen" to="." method="_on_Screen_ticked"]
